# PricingFinancialContractsWithHaskell

./: .gitignore  FinancialContracts.cabal  README.md  stack.yaml
src/Contract/: Contract.hs  FixedFXAndRatesModel.hs  Valuation.hs
test/Contract/: EuropeanOptionSpec.hs  FixedFXAndRatesModelSpec.hs
